[FIN2-402] B: Strings changed to English, NL translations in i18n file

--- a/src/i18n/en_US.csv
+++ b/src/i18n/en_US.csv
@@ -1,2 +1,4 @@
+"Order type:","Order type:",module,Ho_CompanySwitcher
+"Private","Private",module,Ho_CompanySwitcher
+"Business","Business",module,Ho_CompanySwitcher
 "Own Reference","Own Reference",module,Ho_CompanySwitcher
-
