--- a/src/i18n/nl_NL.csv
+++ b/src/i18n/nl_NL.csv
@@ -1,2 +1,4 @@
+"Order type:","Type bestelling:",module,Ho_CompanySwitcher
+"Private","Particulier",module,Ho_CompanySwitcher
+"Business","Zakelijk",module,Ho_CompanySwitcher
 "Own Reference","Eigen Referentie",module,Ho_CompanySwitcher
-
